Mudanças no display e links

--- a/cadastro.html
+++ b/cadastro.html
@@ -36,7 +36,7 @@
 
         <div class="flex items-center mb-4">
             <input type="checkbox" id="terms" class="rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-            <label for="terms" class="ml-2 text-sm text-gray-700">Aceito os <a href="termos-de-uso.html" class="text-blue-600 hover:underline">termos de uso</a></label>
+            <label for="terms" class="ml-2 text-sm text-gray-700">Aceito os <a href="termos-de-uso.html" class="text-blue-600 hover:underline">termos de uso</a> e <a href="termos-de-uso.html" class="text-blue-600 hover:underline">políticas de privacidade</a></label>
         </div>
 
         <button type="button" class="w-full bg-blue-600 text-white py-2 rounded-lg font-medium text-sm hover:bg-blue-700">
