--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Termos de Uso e Política de Privacidade</title>
-    <style>
-        body {
-            overflow: hidden;
-        }
-    </style>
 </head>
 
-<body class="flex flex-col items-center justify-center min-h-screen bg-gray-100 p-6">
+<body class="flex flex-col items-center justify-center min-h-screen bg-gray-100 p-6 overflow-auto">
     <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
         <h2 class="text-xl font-semibold text-center text-gray-700 mb-4">Termos de Uso</h2>
         
